readCatalogue api
