# gardabook-services/SwaggerSrc/swagger.yaml
@@ -108,7 +108,7 @@ paths:
     get:
       tags:
       - "catalogue"
-      summary: "Finds catalogue by tags or providers"
+      summary: "Finds catalogue by tags"
       description: "Multiple tag values can be provided with comma separated strings"
       operationId: "readCatalogueByTags"
       produces:
@@ -153,7 +153,7 @@ paths:
       - "catalogue"
       summary: "Find Catalogue by ID"
       description: "Returns a single Catalogue"
-      operationId: "getCatalogueById"
+      operationId: "readCatalogue"
       produces:
       - "application/xml"
       - "application/json"
